Perkin-UAT/force-app/main/default/objects/B2B_Commerce_Category__c/B2B_Commerce_Category__c.object-meta.xml
<CustomObject>
    <label>B2B Commerce Category</label>
    <nameField>
        <displayFormat>BCC-{0000}</displayFormat>
        <label>B2B Commerce Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Commerce Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>