Perkin-UAT/force-app/main/default/objects/B2B_Commerce_Category__c/fields/Child_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Category</label>
    <referenceTo>ProductCategory</referenceTo>
    <relationshipLabel>B2B Commerce Categories (Child Category)</relationshipLabel>
    <relationshipName>B2B_Commerce_Categories1</relationshipName>
    <type>Lookup</type>
</CustomField>