Perkin-UAT/force-app/main/default/objects/B2B_Commerce_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <label>Parent Category</label>
    <referenceTo>ProductCategory</referenceTo>
    <relationshipLabel>B2B Commerce Categories</relationshipLabel>
    <relationshipName>B2B_Commerce_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>