Perkin-UAT/force-app/main/default/objects/B2B_Commerce_Category__c/fields/Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Technology_Type__c</fullName>
    <label>Technology Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atomic Spectroscopy</fullName>
            </value>
            <value>
                <fullName>Chromatography</fullName>
            </value>
            <value>
                <fullName>Food Quality</fullName>
            </value>
            <value>
                <fullName>Molecular Spectroscopy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>